# contact_point_estimation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: contact_point_estimation.yaml  contact_point_estimator.yaml  surface_normal_estimator.yaml  tool_surface_calib_control.yaml  tool_surface_calib_control_static.yaml
include/contact_point_estimation/: ContactPointEstimation.h  ContactPointEstimationParams.h  ContactPointEstimator.h  ContactPointEstimatorParams.h  SurfaceNormalEstimator.h  SurfaceNormalEstimatorParams.h  SurfaceTracingController.h
launch/: contact_point_estimation.launch  tool_surface_calib_control.launch  tool_surface_static_calib_control.launch  tool_tip_frame_publisher.launch
src/: ContactPointEstimation.cpp  ContactPointEstimationParams.cpp  ContactPointEstimator.cpp  ContactPointEstimatorParams.cpp  SurfaceNormalEstimator.cpp  SurfaceNormalEstimatorParams.cpp  SurfaceTracingController.cpp  ToolSurfaceCalibControl.cpp  contact_point_estimation_node.cpp
