<package>
 <name>contact_point_estimation</name>
  <version>0.1.0</version>
  <description>
    Contact point and surface normal estimation from force-torque measurements using adaptive control.
  </description>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/contact_point_estimation</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>eigen_utils</build_depend>
  

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>eigen_utils</run_depend>
  
</package>